--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,9 +4,24 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Async runtime + net
 tokio = { version = "1", features = ["full", "net"] }
+
+# CLI
 clap = { version = "4", features = ["derive"] }
+
+# Ergonomía de errores
 anyhow = "1"
+
+# RNG (tenés habilitado small_rng; también usamos StdRng)
 rand = { version = "0.8", features = ["small_rng"] }
-common = { path = "../common" }   # link to your shared crate
-libc = "0.2.177"
+
+# Actores
+actix = { version = "0.13", features = ["macros"] }
+
+# Logging (opcional pero recomendado; lo uso en Gateway)
+log = "0.4"
+env_logger = "0.11"
+
+# Tu crate compartido
+common = { path = "../common" }
