--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "client"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+clap = { version = "4", features = ["derive"] }
+anyhow = "1"
