feat: typescript simulator

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 target/
 .vscode/
 /scripts
+**/*.sh
+
+# Todos los node_modules dentro del simulador YPF map
+simulation/ypf-map/node_modules/
+simulation/ypf-map/backend/node_modules/
+simulation/ypf-map/frontend/node_modules/
